--- a/index.html
+++ b/index.html
@@ -112,81 +112,89 @@
       </div>
     </header>
     <!-- Banner -->
-    <div id="carousel">
-      <div class="bd-example">
-        <div
-          id="carouselExampleCaptions"
-          class="carousel slide"
-          data-ride="carousel"
-        >
-          <ol class="carousel-indicators">
-            <li
-              data-target="#carouselExampleCaptions"
-              data-slide-to="0"
-              class="active"
-            ></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./image/finland.jpg" class="d-block w-100" alt="..." />
-              <div class="carousel-caption d-none d-md-block">
-                <img src="./image/01-3.jpg" alt="" />
-                <h5>First slide label</h5>
-                <p>
-                  Nulla vitae elit libero, a pharetra augue mollis interdum.
-                </p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img
-                src="./image/mountains.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-              <div class="carousel-caption d-none d-md-block">
-                <img src="./image/02-3.jpg" alt="" />
-                <h5>Second slide label</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img
-                src="./image/mountains-1.jpg"
-                class="d-block w-100"
-                alt="..."
-              />
-              <div class="carousel-caption d-none d-md-block">
-                <img src="./image/03-3.jpg" alt="" />
-                <h5>Third slide label</h5>
-                <p>
-                  Praesent commodo cursus magna, vel scelerisque nisl
-                  consectetur.
-                </p>
-              </div>
-            </div>
+    <div id="carouselPoochCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li
+          data-target="#carouselPoochCaptions"
+          data-slide-to="0"
+          class="active"
+        ></li>
+        <div class="dots"><li data-target="#carouselPoochCaptions" data-slide-to="1"></li></div>
+        <div class="dots"><li data-target="#carouselPoochCaptions" data-slide-to="2"></li></div>
+        <div class="dots"><li data-target="#carouselPoochCaptions" data-slide-to="3"></li></div>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./image/banner1.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Quality Things for Loving Pets</h5>
+            <p>Keeps your Pet Smiling</p>
+            <a class="btn button__style btn-white mt-sm-5 mt-4 mr-2" href="#">
+              Read More</a
+            >
+            <a class="btn button__style border-btn mt-sm-5 mt-4" href="#">
+              Contact Us</a
+            >
           </div>
-          <a
-            class="carousel-control-prev"
-            href="#carouselExampleCaptions"
-            role="button"
-            data-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a
-            class="carousel-control-next"
-            href="#carouselExampleCaptions"
-            role="button"
-            data-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+        </div>
+        <div class="carousel-item">
+          <img src="./image/banner2.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Delivering happiness for Pets</h5>
+            <p>For the love of pets</p>
+            <a class="btn button__style btn-white mt-sm-5 mt-4 mr-2" href="#">
+              Read More</a
+            >
+            <a class="btn button__style border-btn mt-sm-5 mt-4" href="#">
+              Contact Us</a
+            >
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./image/banner1.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Quality Things for Loving Pets</h5>
+            <p>Keeps your Pet Smiling</p>
+            <a class="btn button__style btn-white mt-sm-5 mt-4 mr-2" href="#">
+              Read More</a
+            >
+            <a class="btn button__style border-btn mt-sm-5 mt-4" href="#">
+              Contact Us</a
+            >
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./image/banner1.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Delivering happiness for Pets</h5>
+            <p>We help your Projects</p>
+            <a class="btn button__style btn-white mt-sm-5 mt-4 mr-2" href="#">
+              Read More</a
+            >
+            <a class="btn button__style border-btn mt-sm-5 mt-4" href="#">
+              Contact Us</a
+            >
+          </div>
         </div>
       </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-target="#carouselPoochCaptions"
+        data-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-target="#carouselPoochCaptions"
+        data-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </button>
     </div>
 
     <!-- ABOUT -->
@@ -359,10 +367,7 @@
               <div class="package__body">
                 <div class="package__top">
                   <h6 class="package__title">Free Package</h6>
-                  <h4>
-                    <label for="">$</label>0
-                    <span>/month</span>
-                  </h4>
+                  <h4><label for="">$</label>0<span>/month</span></h4>
                 </div>
                 <div class="package__bottom">
                   <div class="package__text">
@@ -386,10 +391,7 @@
                 <div class="package__top">
                   <h5>SAVE 10%</h5>
                   <h6 class="package__title">Standard Package</h6>
-                  <h4>
-                    <label for="">$</label>39
-                    <span>/month</span>
-                  </h4>
+                  <h4><label for="">$</label>39<span>/month</span></h4>
                 </div>
                 <div class="package__bottom">
                   <div class="package__text">
@@ -412,10 +414,7 @@
               <div class="package__body">
                 <div class="package__top">
                   <h6 class="package__title">Pro Package</h6>
-                  <h4>
-                    <label for="">$</label>89
-                    <span>/month</span>
-                  </h4>
+                  <h4><label for="">$</label>89<span>/month</span></h4>
                 </div>
                 <div class="package__bottom">
                   <div class="package__text">
@@ -456,15 +455,27 @@
             </div>
             <div class="video__img mt-5">
               <div class="position-relative">
-                <img src="./image/banner2.jpg" class="img-fluid banner2 " alt="banner2-image">
-                <a href="#vimeo__video" class="play__view position-absolute text-center">
+                <img
+                  src="./image/banner2.jpg"
+                  class="img-fluid banner2"
+                  alt="banner2-image"
+                />
+                <a
+                  href="#vimeo__video"
+                  class="play__view position-absolute text-center"
+                >
                   <span class="video__icon">
                     <span class="fa fa-play"></span>
                   </span>
                 </a>
 
                 <div id="vimeo__video" class="zoom__video">
-                  <iframe src="https://player.vimeo.com/video/101587706" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                  <iframe
+                    src="https://player.vimeo.com/video/101587706"
+                    frameborder="0"
+                    allow="autoplay; fullscreen"
+                    allowfullscreen
+                  ></iframe>
                 </div>
               </div>
             </div>
@@ -487,10 +498,21 @@
                 <div class="test__content">
                   <div class="test__text">
                     <blockquote>
-                      <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit beatae laudantium voluptate rem ullam dolore nisi voluptatibus esse quasi, doloribus tempora. Dolores molestias adipisci dolor sit amet!.</q>
+                      <q
+                        >Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Velit beatae laudantium voluptate rem ullam dolore
+                        nisi voluptatibus esse quasi, doloribus tempora. Dolores
+                        molestias adipisci dolor sit amet!.</q
+                      >
                     </blockquote>
                     <div class="test__des">
-                      <div class="test__img"><img src="./image/f1.jpg" class="img-fluid" alt="f1-image"></div>
+                      <div class="test__img">
+                        <img
+                          src="./image/f1.jpg"
+                          class="img-fluid"
+                          alt="f1-image"
+                        />
+                      </div>
                       <div class="des__title align-self">
                         <h3>John wilson</h3>
                         <p class="indentity">Example City</p>
@@ -504,10 +526,21 @@
                 <div class="test__content">
                   <div class="test__text">
                     <blockquote>
-                      <q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit beatae laudantium voluptate rem ullam dolore nisi voluptatibus esse quasi, doloribus tempora. Dolores molestias adipisci dolor sit amet!.</q>
+                      <q
+                        >Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Velit beatae laudantium voluptate rem ullam dolore
+                        nisi voluptatibus esse quasi, doloribus tempora. Dolores
+                        molestias adipisci dolor sit amet!.</q
+                      >
                     </blockquote>
                     <div class="test__des">
-                      <div class="test__img"><img src="./image/f1.jpg" class="img-fluid" alt="f1-image"></div>
+                      <div class="test__img">
+                        <img
+                          src="./image/f1.jpg"
+                          class="img-fluid"
+                          alt="f1-image"
+                        />
+                      </div>
                       <div class="des__title align-self">
                         <h3>John wilson</h3>
                         <p class="indentity">Example City</p>
@@ -516,44 +549,158 @@
                   </div>
                 </div>
               </div>
-
-              
             </div>
           </div>
-
         </div>
       </div>
     </section>
-<!-- FORM POOCH CARE -->
-<section class="form__pooch py-5">
-    <div class="container py-md-4 py-3 text-center">
-      <div class="row my-lg-4 mt-4">
-        <div class="col-lg-9 col-md-10 mx-auto">
-          <div class="subscribe mx-auto">
-            <div class="heading text-center mx-auto">
-              <h3 class="nd__title">Stay Updated! </h3>
-              <p class="my__title"> Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-                Nulla mollis dapibus nunc, ut rhoncus
-                turpis sodales quis. Integer sit amet mattis quam.</p>
-            </div>
-            <form action="" method="post" class=" pt-2 mt-5">
-              <div class="d-md-flex flex-wrap subscribe__form">
-
-                <input class="form-control" type="email" placeholder="Enter your email..." name="Email" required="">
-              
-                <a href="#" class="btn button__style">Subscribe</a>
+    <!-- FORM POOCH CARE -->
+    <section class="form__pooch py-5">
+      <div class="container py-md-4 py-3 text-center">
+        <div class="row my-lg-4 mt-4">
+          <div class="col-lg-9 col-md-10 mx-auto">
+            <div class="subscribe mx-auto">
+              <div class="heading text-center mx-auto">
+                <h3 class="nd__title">Stay Updated!</h3>
+                <p class="my__title">
+                  Vestibulum ante ipsum primis in faucibus orci luctus et
+                  ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut
+                  rhoncus turpis sodales quis. Integer sit amet mattis quam.
+                </p>
               </div>
-            </form>
+              <form action="" method="post" class="pt-2 mt-5">
+                <div class="d-md-flex flex-wrap subscribe__form">
+                  <input
+                    class="form-control"
+                    type="email"
+                    placeholder="Enter your email..."
+                    name="Email"
+                    required=""
+                  />
+
+                  <a href="#" class="btn button__style">Subscribe</a>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-<!-- FOOTER -->
-<section class="footer">
+    </section>
+    <!-- FOOTER -->
+    <section class="footer__pooch">
+      <footer class="footer">
+        <div class="footer__bg">
+          <div class="container py-lg-3">
+            <div class="row footer__top">
+              <div class="footer__list col-lg-6 col-md-5 mt-5">
+                <h6 class="footer__title">Contact information</h6>
+                <ul>
+                  <li>
+                    <p>
+                      <strong>Address</strong>: #135 block, Barnard St.
+                      Brooklyn, London 10036, UK
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <strong>Phone</strong>:
+                      <a href="tel:+(12)234-11-24"> +(12)234-11-24</a>
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      <strong>Email</strong>: <a href="#">example@mail.com</a>
+                    </p>
+                  </li>
+                </ul>
 
-</section>
+                <div class="footer__social">
+                  <ul class="social__icon">
+                    <li>
+                      <a href="#"
+                        ><span
+                          class="fa-brands fa-facebook-f"
+                          aria-hidden="true"
+                        ></span
+                      ></a>
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><span
+                          class="fa-brands fa-twitter"
+                          aria-hidden="true"
+                        ></span
+                      ></a>
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><span
+                          class="fa-brands fa-dribbble"
+                          aria-hidden="true"
+                        ></span
+                      ></a>
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><span
+                          class="fa-brands fa-google"
+                          aria-hidden="true"
+                        ></span
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
 
+              <div class="col-lg-6 col-md-7">
+                <div class="row">
+                  <div class="col-sm-4 col-6 footer__list mt-5">
+                    <div id="archives" class="widget__archive">
+                      <h6 class="footer__title">Archives</h6>
+                      <ul>
+                        <li><a href="#">December 2020</a></li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-4 col-6 footer__list mt-5">
+                    <div id="categories" class="widget__categorie">
+                      <h6 class="footer__title">Categories</h6>
+                      <ul>
+                        <li><a href="#">Animals</a></li>
+                        <li><a href="#">Pets</a></li>
+                        <li><a href="#">Pets care</a></li>
+                        <li><a href="#">Uncategorized</a></li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="col-sm-4 footer__list mt-5">
+                    <div id="meta" class="widget__meta">
+                      <h6 class="footer__title">Meta</h6>
+                      <ul>
+                        <li><a href="#">Log in</a></li>
+                        <li><a href="#">Entries feed</a></li>
+                        <li><a href="#">Comments feed</a></li>
+                        <li><a href="#">WordPress.org</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="footer__bottom align-center py-lg-4 py-3 mt-5">
+            <div class="container">
+              <p class="footer__copyright text-center">
+                &copy; 2023 All Rights Reserved by <a href="#">W3Layouts.</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </section>
 
     <!-- JQUERY -->
     <script
