--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Magnific Popup -->
+    <link rel="stylesheet" href="magnific-popup/magnific-popup.css" />
 
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -119,82 +121,93 @@
           data-slide-to="0"
           class="active"
         ></li>
-        <div class="dots"><li data-target="#carouselPoochCaptions" data-slide-to="1"></li></div>
-        <div class="dots"><li data-target="#carouselPoochCaptions" data-slide-to="2"></li></div>
-        <div class="dots"><li data-target="#carouselPoochCaptions" data-slide-to="3"></li></div>
+        <li data-target="#carouselPoochCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselPoochCaptions" data-slide-to="2"></li>
+        <li data-target="#carouselPoochCaptions" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./image/banner1.jpg" class="d-block w-100" alt="..." />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Quality Things for Loving Pets</h5>
-            <p>Keeps your Pet Smiling</p>
-            <a class="btn button__style btn-white mt-sm-5 mt-4 mr-2" href="#">
-              Read More</a
-            >
-            <a class="btn button__style border-btn mt-sm-5 mt-4" href="#">
-              Contact Us</a
-            >
+          <div class="banner__top1 banner__view"></div>
+          <div class="banner__infor">
+            <div class="container">
+              <div class="carousel-caption d-none d-md-block text-left banner-infor-bg">
+                <h5>Quality Things for Loving Pets</h5>
+                <p>Keeps your Pet Smiling</p>
+                <a
+                  class="btn button__style btn-white mt-sm-5 mt-4 mr-2"
+                  href="#"
+                >
+                  Read More</a
+                >
+                <a class="btn button__style border-btn mt-sm-5 mt-4" href="#">
+                  Contact Us</a
+                >
+              </div>
+            </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./image/banner2.jpg" class="d-block w-100" alt="..." />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Delivering happiness for Pets</h5>
-            <p>For the love of pets</p>
-            <a class="btn button__style btn-white mt-sm-5 mt-4 mr-2" href="#">
-              Read More</a
-            >
-            <a class="btn button__style border-btn mt-sm-5 mt-4" href="#">
-              Contact Us</a
-            >
+          <div class="banner__top2 banner__view"></div>
+          <div class="banner__infor">
+            <div class="container">
+              <div class="carousel-caption d-none d-md-block text-left banner-infor-bg ml-lg-auto">
+                <h5>Delivering happiness for Pets</h5>
+                <p>For the love of pets</p>
+                <a
+                  class="btn button__style btn-white mt-sm-5 mt-4 mr-2"
+                  href="#"
+                >
+                  Read More</a
+                >
+                <a class="btn button__style border-btn mt-sm-5 mt-4" href="#">
+                  Contact Us</a
+                >
+              </div>
+            </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./image/banner1.jpg" class="d-block w-100" alt="..." />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Quality Things for Loving Pets</h5>
-            <p>Keeps your Pet Smiling</p>
-            <a class="btn button__style btn-white mt-sm-5 mt-4 mr-2" href="#">
-              Read More</a
-            >
-            <a class="btn button__style border-btn mt-sm-5 mt-4" href="#">
-              Contact Us</a
-            >
+          <div class="banner__top3 banner__view"></div>
+          <div class="banner__infor">
+            <div class="container">
+              <div class="carousel-caption d-none d-md-block text-left banner-infor-bg">
+                <h5>Quality Things for Loving Pets</h5>
+                <p>Keeps your Pet Smiling</p>
+                <a
+                  class="btn button__style btn-white mt-sm-5 mt-4 mr-2"
+                  href="#"
+                >
+                  Read More</a
+                >
+                <a class="btn button__style border-btn mt-sm-5 mt-4" href="#">
+                  Contact Us</a
+                >
+              </div>
+            </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./image/banner1.jpg" class="d-block w-100" alt="..." />
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Delivering happiness for Pets</h5>
-            <p>We help your Projects</p>
-            <a class="btn button__style btn-white mt-sm-5 mt-4 mr-2" href="#">
-              Read More</a
-            >
-            <a class="btn button__style border-btn mt-sm-5 mt-4" href="#">
-              Contact Us</a
-            >
+          <div class="banner__top4 banner__view"></div>
+          <div class="banner__infor">
+            <div class="container">
+              <div class="carousel-caption d-none d-md-block text-left banner-infor-bg ml-lg-auto">
+                <h5>Delivering happiness for Pets</h5>
+                <p>We help your Projects</p>
+                <a
+                  class="btn button__style btn-white mt-sm-5 mt-4 mr-2"
+                  href="#"
+                >
+                  Read More</a
+                >
+                <a class="btn button__style border-btn mt-sm-5 mt-4" href="#">
+                  Contact Us</a
+                >
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-target="#carouselPoochCaptions"
-        data-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-target="#carouselPoochCaptions"
-        data-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </button>
+      
     </div>
 
     <!-- ABOUT -->
@@ -462,14 +475,14 @@
                 />
                 <a
                   href="#vimeo__video"
-                  class="play__view position-absolute text-center"
+                  class="play__view position-absolute text-center open-popup-link popup-with-zoom-anim"
                 >
                   <span class="video__icon">
                     <span class="fa fa-play"></span>
                   </span>
                 </a>
 
-                <div id="vimeo__video" class="zoom__video">
+                <div id="vimeo__video" class="zoom-anim-dialog mfp-hide">
                   <iframe
                     src="https://player.vimeo.com/video/101587706"
                     frameborder="0"
@@ -729,5 +742,7 @@
         delay: 10,
       });
     </script>
+    <!-- Magnific Popup JS -->
+    <script src="magnific-popup/jquery.magnific-popup.js"></script>
   </body>
 </html>
