--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </head>
   <body id="myBody">
     <!-- HEADER -->
-    <header class="nav-fixed">
+    <header class="nav-fixed main-header">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
           <h1><a class="navbar-brand" href="#">Pooch Care</a></h1>
@@ -69,7 +69,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedPooch">
