--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       </div>
     </header>
     <!-- Banner -->
-    <div id="carouselPoochCaptions" class="carousel slide" data-ride="carousel">
+    <section id="carouselPoochCaptions" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li
           data-target="#carouselPoochCaptions"
@@ -153,7 +153,7 @@
           <div class="banner__infor">
             <div class="container">
               <div
-                class="carousel-caption d-none d-md-block text-left banner-infor-bg"
+                class="carousel-caption d-md-block text-left banner-infor-bg"
               >
                 <h5>Quality Things for Loving Pets</h5>
                 <p>Keeps your Pet Smiling</p>
@@ -175,7 +175,7 @@
           <div class="banner__infor">
             <div class="container">
               <div
-                class="carousel-caption d-none d-md-block text-left banner-infor-bg ml-lg-auto"
+                class="carousel-caption d-md-block text-left banner-infor-bg ml-lg-auto"
               >
                 <h5>Delivering happiness for Pets</h5>
                 <p>For the love of pets</p>
@@ -197,7 +197,7 @@
           <div class="banner__infor">
             <div class="container">
               <div
-                class="carousel-caption d-none d-md-block text-left banner-infor-bg"
+                class="carousel-caption d-md-block text-left banner-infor-bg"
               >
                 <h5>Quality Things for Loving Pets</h5>
                 <p>Keeps your Pet Smiling</p>
@@ -219,7 +219,7 @@
           <div class="banner__infor">
             <div class="container">
               <div
-                class="carousel-caption d-none d-md-block text-left banner-infor-bg ml-lg-auto"
+                class="carousel-caption d-md-block text-left banner-infor-bg ml-lg-auto"
               >
                 <h5>Delivering happiness for Pets</h5>
                 <p>We help your Projects</p>
@@ -237,7 +237,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- ABOUT -->
     <section class="about py-5" id="about">
